apps/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    matchLabels:
      app: qbittorrent
  replicas: 0
  template:
    metadata:
      labels:
        app: qbittorrent
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: downloads
              mountPath: "/downloads"
            - name: config
              mountPath: "/config"
      volumes:
        - name: downloads
          hostPath:
            path: /media/downloads
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
