apps/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    gethomepage.dev/name: qBittorrent
    gethomepage.dev/description: Torrent client
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: qbittorrent.png
    gethomepage.dev/pod-selector: ""
spec:
  tls:
    - hosts:
        - qbittorrent.totorinho.duckdns.org
      secretName: duckdns-wildcard-cert-totorinho.duckdns.org
  rules:
    - host: qbittorrent.totorinho.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
